# Telos

./: .gitignore  CMakeLists.txt  ElegantDark.qss  README.md  VersionLog.txt  dialogtaskselect.cpp  dialogtaskselect.h  dialogtaskselect.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc  task.cpp  task.h  test.cpp  test.h
